--- a/main.html
+++ b/main.html
@@ -10,15 +10,70 @@
     <body>
       <div id = "wrapper">
         <div id = "borderNavigationBar">
+          <div class = "borderTab" id = "userTab">
 
+          </div>
+          <div class = "borderTab">
+            主页  
+          </div>
+          <div class = "borderTab">
+            JavaScript作业
+          </div>
+          <div class = "borderTab">
+
+          </div>
+          <div class = "borderTab">
+
+          </div>
+          <div class = "borderTab">
+
+          </div>
+          <div class = "borderTab">
+
+          </div>
         </div>
+
         <div id = "main">
-          <div id = "navigationBar">
+          <div id = "navigationBar"></div>
 
-          </div>
           <div id = "content">
-
+            <!--作业1-->
+            <div class = "work" id = "work1">
+              <div class = "headerBox">
+                <h4>1.九九乘法表</h4>
+                <div class = "buttonBox1">
+                  <button class="button" id="generateMultiplication">点击生成</button>
+                  <button class="button" id="hideMultiplication">点击隐藏</button>
+                </div>
+              </div>
+              <div class = "contentBox">
+                <table id = "multiplicationTable"></table>
+              </div>
+            </div>
+            <!--作业2-->
+            <div class="work" id="work2">
+              <div class="headerBox">
+                <h4>2. 成绩评价</h4>
+              </div>
+              <div class="contentBox">
+                <span class = "workText">请输入1~100内的数字:</span>
+                <input type="number" class="contentInput" id="scoreInput"/>
+                <button class = "button" id="evaluateButton">确定</button>
+              </div>
+            </div>
+            <!--作业3-->
+            <div class = "work" id = "work3">
+              <div class="headerBox">
+                <h4>3. 检测邮箱</h4>
+              </div>
+              <div class="contentBox">
+                <span class = "workText">请输入要检测的邮箱:</span>
+                <input type="text" class="contentInput" id="emailInput"/>
+                <button class = "button" id="emailEvaluateButton">确定</button>
+              </div>
+            </div>
           </div>
+
         </div>
       </div>
       <script src = "./main.js"></script>
