稍微加点注释

--- a/main.html
+++ b/main.html
@@ -5,10 +5,10 @@
 
         <title>个人博客</title>
         <link rel = "stylesheet" href = "./style.css">
-        
     </head>
     <body>
       <div id = "wrapper">
+        <!--左边栏-->
         <div id = "borderNavigationBar">
           <div class = "borderTab" id = "userTab">
 
@@ -32,10 +32,11 @@
 
           </div>
         </div>
-
+        <!--右边主体内容-->
         <div id = "main">
+          <!--内容标签-->
           <div id = "navigationBar"></div>
-
+          <!--主要内容页面-->
           <div id = "content">
             <!--作业1-->
             <div class = "work" id = "work1">
