--- a/main.html
+++ b/main.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-CN">
     <head>
         <meta charset = "utf-8">
-
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>个人博客</title>
         <link rel = "stylesheet" href = "./style.css">
     </head>
