简单完善基本信息

--- a/main.html
+++ b/main.html
@@ -38,7 +38,33 @@
           <div id = "navigationBar"></div>
           <!--主要内容页面-->
           <div id = "content">
-
+            <h1>我的个人主页</h1>
+            <div id="selfInfo">
+              <img src="./image/profilePicture.jpg" alt="profilePicture" width="128">
+              <h2>ASaKi</h2>
+              <div id="mainSocialWebBox">
+                <a href="https://github.com/changan200482?tab=repositories" target="_blank" rel="noopener">
+                  <img src="./image/github.svg" alt="github" width="64" >
+                </a>
+                <a href="https://space.bilibili.com/290385549?spm_id_from=333.1007.0.0" target="_blank" rel="noopener">
+                  <img src="./image/bilibili.svg" alt="bilibili" width="64">
+                </a>
+              </div>
+             
+              <div id="emailNumBox" class="infoBox">
+                <img src="./image/email-fill.svg" alt="email" width="64">
+                <span class="homeFont">:202211030701@qq.com</span>
+              </div>
+              <div id="QQNumBox" class="infoBox">
+                <img src="./image/qq.svg" alt="qq" width="64">
+                <span class="homeFont">:2806054563</span>
+              </div>
+            </div>
+            <audio controls id="player1">
+              <source src="./audio/Travelers.mp3" type="audio/mpeg">
+            您的浏览器不支持 audio 元素。
+            </audio>
+            <div id="draggable"></div>
           </div>
         </div>
       </div>
