开始做前端样式和地图api

--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
       <div id = "wrapper">
         <!--左边栏-->
         <div id = "borderNavigationBar">
-          <div class = "borderTab" id = "userTab">
+          <div class id = "userTab">
 
           </div>
           <div class = "borderTab  activeTab" data-target = "home">
@@ -19,8 +19,8 @@
           <div class = "borderTab" data-target = "javaScriptWork">
             JavaScript作业
           </div>
-          <div class = "borderTab">
-
+          <div class = "borderTab" data-target="Text">
+            Text
           </div>
           <div class = "borderTab">
 
