--- a/home/home.html
+++ b/home/home.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1"> 
 
         <title>个人博客</title>
-        <link rel = "stylesheet" href = "./style.css">
+        <link rel="stylesheet" href = "./style.css">
         <link rel="stylesheet" href="../basicStyle/header.css">
         <link rel="stylesheet" href="./CSS/content.css">
         <link rel="stylesheet" href="../basicStyle/button.css">
@@ -15,16 +15,17 @@
     <body>
       <div id = "header">
         <div id ="head-home">
-          <a href ="">
+          <a href ="./home.html">
             <img id ="head-homeImg" src ="../image/home.svg" alt ="home" width ="16" height ="16">
           </a>
-          <a  href ="" id="head-selfBlog" >个人博客</a>
+          <a  href ="./home.html" id="head-selfBlog" >个人博客</a>
         </div>
         <div id ="head-menu">
           <li><a class ="head-menuSelect activeMenu" id="menuHome" href="./home.html" >主页</a></li>
           <li><a class ="head-menuSelect" id="menuLibrary" href="../library/library.html">图书角</a></li>
           <li><a class ="head-menuSelect" id="menuNote" href="../note/note.html">记录</a></li>
-          <li><a class ="head-menuSelect" id="menuTools" href="../tools/tools.html" >工具</a></li>
+          <li><a class ="head-menuSelect" id="menuTools" href="../tools/tools.html">工具</a></li>
+          <li><a class ="head-menuSelect" id="menuTools" href="../interesting/interesting.html">有意思的</a></li>
           <li><a class ="head-menuSelect" id="menuMore" href="#">更多</a></li>
         </div>
         <div id="head-selfInfo">
@@ -99,7 +100,7 @@
           </div>
           <div class="card-style" id="card-selfIntroduction">
             <div id="card-menu">
-              <li class="card-menuLi" id="activeMenuLi" >
+              <li class="card-menuLi activeMenuLi">
                 <img title="个性签名" src="../image/introduce-copy.svg" alt="introduce" width="28" height="28">
               </li>
               <li class="card-menuLi">
