--- a/note/note.html
+++ b/note/note.html
@@ -14,16 +14,17 @@
     <body>
       <div id = "header">
         <div id ="head-home">
-          <a href ="">
+          <a href ="../home/home.html">
             <img id ="head-homeImg" src ="../image/home.svg" alt ="home" width ="16" height ="16">
           </a>
-          <a  href ="" id="head-selfBlog" >个人博客</a>
+          <a  href ="../home/home.html" id="head-selfBlog" >个人博客</a>
         </div>
         <div id ="head-menu">
             <li><a class ="head-menuSelect" id="menuHome" href="../home/home.html" >主页</a></li>
             <li><a class ="head-menuSelect" id="menuLibrary" href="../library/library.html">图书角</a></li>
             <li><a class ="head-menuSelect activeMenu" id="menuNote" href="./note.html">记录</a></li>
             <li><a class ="head-menuSelect" id="menuTools" href="../tools/tools.html" >工具</a></li>
+            <li><a class ="head-menuSelect" id="menuTools" href="../interesting/interesting.html">有意思的</a></li>
             <li><a class ="head-menuSelect" id="menuMore" href="#">更多</a></li>
         </div>
         <div id="head-selfInfo">
