为改为vue架构做准备

--- a/frontend/bookshelf.html
+++ b/frontend/bookshelf.html
@@ -28,7 +28,7 @@
                 <li><a class ="head-menuSelect" id="menuMore" href="#">更多</a></li>
             </div>
             <div id="head-selfInfo">
-                <a id="head-infoOfProject" href=""></a>
+                <a id="head-infoOfProject" href="https://github.com/changan200482" target="_blank"></a>
                 <button id="head-selfInfoImg"></button>
             </div>
         </div>
