--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,7 +26,7 @@
           <li><a class ="head-menuSelect" id="menuMore" href="#">更多</a></li>
         </div>
         <div id="head-selfInfo">
-          <a id="head-infoOfProject" href=""></a>
+          <a id="head-infoOfProject" href="https://github.com/changan200482" target="_blank"></a>
           <button id="head-selfInfoImg"></button>
         </div>
       </div>
@@ -81,27 +81,27 @@
         </div>
         <div class="card" id="card-selfInfo">
           <div class="card-style" id="card-basicInfo">
-            <img id="card-selfInfoImg" src="../image/profilePicture.jpg" alt="profilePicture" width="128px" height="128px">
+            <img id="card-selfInfoImg" src="./images/profilePicture.jpg" alt="profilePicture" width="128px" height="128px">
             <h3 id="card-surferName" >ASaKi</h3>
             <div id="card-webBox">
               <a id="card-bilibiliSite" href="">
-                <img class="card-boxStyle" src="../image/bilibili.svg" alt="bilibili's adress" width="28" height="28">
+                <img class="card-boxStyle" src="./images/bilibili.svg" alt="bilibili's adress" width="28" height="28">
               </a>
               <a id="card-githubSite" href="">
-                <img class="card-boxStyle" src="../image/github3.svg" alt="github's adress" width="28" height="28">
+                <img class="card-boxStyle" src="./images/github3.svg" alt="github's adress" width="28" height="28">
               </a>
               <a id="card-QQSite" href="">
-                <img class="card-boxStyle" src="../image/qq.svg" alt="QQ's adress" width="28" height="28">
+                <img class="card-boxStyle" src="./images/qq.svg" alt="QQ's adress" width="28" height="28">
               </a>
             </div>
           </div>
           <div class="card-style" id="card-selfIntroduction">
             <div id="card-menu">
               <li class="card-menuLi activeMenuLi">
-                <img title="个性签名" src="../image/introduce-copy.svg" alt="introduce" width="28" height="28">
+                <img title="个性签名" src="./images/introduce-copy.svg" alt="introduce" width="28" height="28">
               </li>
               <li class="card-menuLi">
-                <img title="标签" src="../image/tag.svg" alt="tag" width="28" height="28">
+                <img title="标签" src="./images/tag.svg" alt="tag" width="28" height="28">
               </li>
               <li class="card-menuLi"></li>
               <li class="card-menuLi"></li>
